Using Character.valueOf() in preference to new Character()
git-svn-id: file:///home/daniel/src/blinkenlights/legacy/svn/blinkenlights/trunk@874 fe0de55c-ccef-0310-be5c-e8635c8c2365